src/objects/Application__c.object
<CustomObject>
    <fields>
        <fullName>AF_Reserves_of_National_Guard__c</fullName>
        <label>AF Reserves of National Guard</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Academic_History_Section__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Academic History Section</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accompanying_Family_to_U_S__c</fullName>
        <label>Accompanying Family to U S</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active_Duty__c</fullName>
        <label>Active Duty</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Admissions_Status__c</fullName>
        <label>Admissions Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inquiry</fullName>
                </value>
                <value>
                    <fullName>Started App</fullName>
                </value>
                <value>
                    <fullName>Submitted App</fullName>
                </value>
                <value>
                    <fullName>Complete App</fullName>
                </value>
                <value>
                    <fullName>Admit</fullName>
                </value>
                <value>
                    <fullName>Deposit</fullName>
                </value>
                <value>
                    <fullName>File Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>App_Type__c</fullName>
        <label>App Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Student: I have a high school diploma or equivalent like the GED and want to attend College for the first time.</fullName>
                </value>
                <value>
                    <fullName>International Student: I&apos;m a student from outside the United States.</fullName>
                </value>
                <value>
                    <fullName>Returning Student: I&apos;m a previous Pima student wanting to take classes.</fullName>
                </value>
                <value>
                    <fullName>High School Student: I&apos;m currently a high school student wanting to take college courses for both high school and college credit (Dual Enrollment) or college credit only (Early Admission).</fullName>
                </value>
                <value>
                    <fullName>Transfer Student: I&apos;m transferring to Pima from another college or university and have never applied to Pima before.</fullName>
                </value>
                <value>
                    <fullName>Guest Student: I&apos;m a student at another college or university and would just like to take a few other classes at Pima.</fullName>
                </value>
                <value>
                    <fullName>Adult Basic Education Student: I want to prepare for a High School Equivalency (HSE) exam like the GED, learn/improve my English, improve my basic skills in reading, writing or math, or learn about citizenship.</fullName>
                </value>
                <value>
                    <fullName>Community/Personal Development Student: I&apos;m interested in noncredit courses or workshops for personal interest.</fullName>
                </value>
                <value>
                    <fullName>Workforce/Professional Student: I&apos;m interested in workforce/skills training, Continuing Education Units (CEU) or taking classes arranged through my employer.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Application Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Area_of_Major__c</fullName>
        <label>Area of Major</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Area_of_Study__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Administration of Justice</fullName>
                </value>
                <value>
                    <fullName>American Indian Studies</fullName>
                </value>
                <value>
                    <fullName>Anthropology</fullName>
                </value>
                <value>
                    <fullName>Astronomy</fullName>
                </value>
                <value>
                    <fullName>Automotive Technology</fullName>
                </value>
                <value>
                    <fullName>Aviation Technology</fullName>
                </value>
                <value>
                    <fullName>Biochemistry</fullName>
                </value>
                <value>
                    <fullName>Biology</fullName>
                </value>
                <value>
                    <fullName>Biotechnology</fullName>
                </value>
                <value>
                    <fullName>Building and Construction Technology</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Chemistry</fullName>
                </value>
                <value>
                    <fullName>Clinical Research Coordinator</fullName>
                </value>
                <value>
                    <fullName>Communication</fullName>
                </value>
                <value>
                    <fullName>Computer Aided Drafting</fullName>
                </value>
                <value>
                    <fullName>Computer Information Systems</fullName>
                </value>
                <value>
                    <fullName>Culinary Arts</fullName>
                </value>
                <value>
                    <fullName>Dental Studies</fullName>
                </value>
                <value>
                    <fullName>Digital Arts</fullName>
                </value>
                <value>
                    <fullName>Direct Care Professional</fullName>
                </value>
                <value>
                    <fullName>Early Childhood Education</fullName>
                </value>
                <value>
                    <fullName>Educational Technology</fullName>
                </value>
                <value>
                    <fullName>Emergency Medical Technology</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Fashion Design</fullName>
                </value>
                <value>
                    <fullName>Field Archeology</fullName>
                </value>
                <value>
                    <fullName>Fine Arts</fullName>
                </value>
                <value>
                    <fullName>Fire Science</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Area_of_Study__c</fullName>
        <label>Area of Study</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arts, Humanities &amp; Communication</fullName>
                </value>
                <value>
                    <fullName>Business Programs</fullName>
                </value>
                <value>
                    <fullName>Computer Information Technology</fullName>
                </value>
                <value>
                    <fullName>Education Programs</fullName>
                </value>
                <value>
                    <fullName>General Studies or Undecided</fullName>
                </value>
                <value>
                    <fullName>Health-Related Professions</fullName>
                </value>
                <value>
                    <fullName>Public Safety Programs</fullName>
                </value>
                <value>
                    <fullName>Science &amp; Engineering</fullName>
                </value>
                <value>
                    <fullName>Social Sciences</fullName>
                </value>
                <value>
                    <fullName>Trade Professions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Arizona_Tax_Filer__c</fullName>
        <label>Arizona Tax Filer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Concentration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Concentration</label>
        <referenceTo>Concentration__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Info_Section__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Info Section</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Employment_Status__c</fullName>
        <label>Current Employment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Employed Full-Time</fullName>
                </value>
                <value>
                    <fullName>Employed Part-time (20 or fewer hours a week)</fullName>
                </value>
                <value>
                    <fullName>Unemployed &amp; Seeking Employment</fullName>
                </value>
                <value>
                    <fullName>Unemployed &amp; Not Seeking Employment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disability_Resources_Section__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disability Resources Section</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_You_Plan_To_Apply_For_Financial_Aid__c</fullName>
        <label>Do You Plan To Apply For Financial Aid</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>I don&apos;t know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Doc_Show_Arizona_Perm__c</fullName>
        <label>Doc Show Arizona Perm</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Driver_LicenseState_ID_Issue_Date_Self__c</fullName>
        <label>Driver LicenseState ID Issue Date Self</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Driver_License_State_ID_Issue_Date_P_G__c</fullName>
        <label>Driver License State ID Issue Date P G</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Driver_License_State_ID_Number_P_G__c</fullName>
        <label>Driver License State ID Number P G</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Driver_License_State_ID_Number_Self__c</fullName>
        <label>Driver License State ID Number Self</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Transfer__c</fullName>
        <label>Employer Transfer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enrollment_Questions_Section__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enrollment Questions Section</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Family_Status_Section__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Family Status Section</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financial_Aid_Section__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Financial Aid Section</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Computer_Access__c</fullName>
        <label>Home Computer Access</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Honorably_Discharged__c</fullName>
        <label>Honorably Discharged</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I_20_Form_Release_Method__c</fullName>
        <label>I 20 Form Release Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mail to my Primary (Permanent/Home) Address</fullName>
                </value>
                <value>
                    <fullName>Mail to my Secondary (Local/Mailing) Address</fullName>
                </value>
                <value>
                    <fullName>In-person Pick-up (You will be emailed when it is available)</fullName>
                </value>
                <value>
                    <fullName>Mail to my Third Party Representative (A Release Form with be required)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Indicate_Provided_140_Tax_Form__c</fullName>
        <label>Indicate Provided 140 Tax Form</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Parent/Guardian</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Indicate_Provided_License_ID__c</fullName>
        <label>Indicate Provided License ID</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Parent/Guardian</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Indicate_Provided_Vehicle_Registration__c</fullName>
        <label>Indicate Provided Vehicle Registration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Parent/Guardian</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Indicate_Provided_Voter_Registration__c</fullName>
        <label>Indicate Provided Voter Registration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Parent/Guardian</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Info_about_ADR__c</fullName>
        <label>Info about ADR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>International_Agent_Aided_Application__c</fullName>
        <label>International Agent Aided Application</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t Know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>International_Agent_Name__c</fullName>
        <label>International Agent Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>International_Section__c</fullName>
        <defaultValue>false</defaultValue>
        <label>International Section</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Ties_w_Arizona__c</fullName>
        <label>Legal Ties w Arizona</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arizona Driver&apos;s License or State ID</fullName>
                </value>
                <value>
                    <fullName>State of Arizona Tax Forms (For yourself, or listing you as a dependent/spouse) showing 12 months of residence</fullName>
                </value>
                <value>
                    <fullName>Arizona Voter Registration Card</fullName>
                </value>
                <value>
                    <fullName>Arizona Vehicle Registration Form</fullName>
                </value>
                <value>
                    <fullName>Arizona Lease agreement</fullName>
                </value>
                <value>
                    <fullName>Arizona High School Transcripts, if graduated within the last year</fullName>
                </value>
                <value>
                    <fullName>Arizona Employment Verification</fullName>
                </value>
                <value>
                    <fullName>None of the above</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Length_of_Study_at_PIMA__c</fullName>
        <label>Length of Study at PIMA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Less than 1 week</fullName>
                </value>
                <value>
                    <fullName>One to four weeks</fullName>
                </value>
                <value>
                    <fullName>Four to eight weeks</fullName>
                </value>
                <value>
                    <fullName>More than eight weeks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lived_in_Arizona__c</fullName>
        <label>Lived in Arizona</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never Married</fullName>
                </value>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Widowed</fullName>
                </value>
                <value>
                    <fullName>Divorced</fullName>
                </value>
                <value>
                    <fullName>Partnered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Military_Status__c</fullName>
        <label>Military Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_1_Country__c</fullName>
        <label>Parent 1 Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>UNITED STATES OF AMERICA</fullName>
                </value>
                <value>
                    <fullName>UNKNOWN</fullName>
                </value>
                <value>
                    <fullName>AFGHANISTAN</fullName>
                </value>
                <value>
                    <fullName>ÅLAND ISLANDS</fullName>
                </value>
                <value>
                    <fullName>ALBANIA</fullName>
                </value>
                <value>
                    <fullName>ALGERIA (al-Djazāʼir)</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAMOA</fullName>
                </value>
                <value>
                    <fullName>ANDORRA</fullName>
                </value>
                <value>
                    <fullName>ANGOLA</fullName>
                </value>
                <value>
                    <fullName>ANGUILLA</fullName>
                </value>
                <value>
                    <fullName>ANTARCTICA</fullName>
                </value>
                <value>
                    <fullName>ANTIGUA AND BARBUDA</fullName>
                </value>
                <value>
                    <fullName>ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>ARMENIA</fullName>
                </value>
                <value>
                    <fullName>ARUBA</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AZERBAIJAN</fullName>
                </value>
                <value>
                    <fullName>BAHAMAS</fullName>
                </value>
                <value>
                    <fullName>BAHRAIN</fullName>
                </value>
                <value>
                    <fullName>BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BARBADOS</fullName>
                </value>
                <value>
                    <fullName>BELARUS</fullName>
                </value>
                <value>
                    <fullName>BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BELIZE</fullName>
                </value>
                <value>
                    <fullName>BENIN</fullName>
                </value>
                <value>
                    <fullName>BERMUDA</fullName>
                </value>
                <value>
                    <fullName>BHUTAN</fullName>
                </value>
                <value>
                    <fullName>BOLIVIA</fullName>
                </value>
                <value>
                    <fullName>BONAIRE, ST. EUSTATIUS, AND SABA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_2_Country__c</fullName>
        <label>Parent 2 Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>UNITED STATES OF AMERICA</fullName>
                </value>
                <value>
                    <fullName>UNKNOWN</fullName>
                </value>
                <value>
                    <fullName>AFGHANISTAN</fullName>
                </value>
                <value>
                    <fullName>ÅLAND ISLANDS</fullName>
                </value>
                <value>
                    <fullName>ALBANIA</fullName>
                </value>
                <value>
                    <fullName>ALGERIA (al-Djazāʼir)</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAMOA</fullName>
                </value>
                <value>
                    <fullName>ANDORRA</fullName>
                </value>
                <value>
                    <fullName>ANGOLA</fullName>
                </value>
                <value>
                    <fullName>ANGUILLA</fullName>
                </value>
                <value>
                    <fullName>ANTARCTICA</fullName>
                </value>
                <value>
                    <fullName>ANTIGUA AND BARBUDA</fullName>
                </value>
                <value>
                    <fullName>ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>ARMENIA</fullName>
                </value>
                <value>
                    <fullName>ARUBA</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AZERBAIJAN</fullName>
                </value>
                <value>
                    <fullName>BAHAMAS</fullName>
                </value>
                <value>
                    <fullName>BAHRAIN</fullName>
                </value>
                <value>
                    <fullName>BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BARBADOS</fullName>
                </value>
                <value>
                    <fullName>BELARUS</fullName>
                </value>
                <value>
                    <fullName>BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BELIZE</fullName>
                </value>
                <value>
                    <fullName>BENIN</fullName>
                </value>
                <value>
                    <fullName>BERMUDA</fullName>
                </value>
                <value>
                    <fullName>BHUTAN</fullName>
                </value>
                <value>
                    <fullName>BOLIVIA</fullName>
                </value>
                <value>
                    <fullName>BONAIRE, ST. EUSTATIUS, AND SABA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Bachelor_s_or_Higher__c</fullName>
        <label>Parent Bachelor s or Higher</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t Know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Personal_Data_Section__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Personal Data Section</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Language__c</fullName>
        <label>Primary Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Afrikaans</fullName>
                </value>
                <value>
                    <fullName>Albanian</fullName>
                </value>
                <value>
                    <fullName>Apache</fullName>
                </value>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Armenian</fullName>
                </value>
                <value>
                    <fullName>Azerbaijani</fullName>
                </value>
                <value>
                    <fullName>Balinese</fullName>
                </value>
                <value>
                    <fullName>Belarusian</fullName>
                </value>
                <value>
                    <fullName>Bengali</fullName>
                </value>
                <value>
                    <fullName>Bora</fullName>
                </value>
                <value>
                    <fullName>Bosnian</fullName>
                </value>
                <value>
                    <fullName>Bulgarian</fullName>
                </value>
                <value>
                    <fullName>Burmese</fullName>
                </value>
                <value>
                    <fullName>Bhutanese</fullName>
                </value>
                <value>
                    <fullName>Cambodian</fullName>
                </value>
                <value>
                    <fullName>Croatian</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Dari</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>Estonian</fullName>
                </value>
                <value>
                    <fullName>Farsi (Persian)</fullName>
                </value>
                <value>
                    <fullName>Faroese</fullName>
                </value>
                <value>
                    <fullName>Fijian</fullName>
                </value>
                <value>
                    <fullName>Filipino</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>Flemish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Offered__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Offered</label>
        <referenceTo>Program_Offered__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>